feat(mnist): first working(ish) prototype
- integrate the neural-net
- add several canvas apis
- add graphics/data utils
- small setup changes (css -> scss)

--- a/mnist/src/app/app.component.html
+++ b/mnist/src/app/app.component.html
@@ -1,3 +1,10 @@
-<h1>MNIST app</h1>
+<div class="mnist-container">
+  <h1>MNIST app</h1>
 
-<mnist-canvas [id]="'mnist'"></mnist-canvas>
+  <mnist-canvas [id]="'mnist'"></mnist-canvas>
+
+  <div>
+    <button md-button (click)="clearCanvas()">Clear</button>
+    <button md-button (click)="recognizeDigit()">Predict</button>
+  </div>
+</div>
