--- a/mnist/src/app/app.component.scss
+++ b/mnist/src/app/app.component.scss
@@ -1,4 +1,24 @@
 .mnist-container {
   width: 600px;
   margin: 0 auto;
+  text-align: center;
+
+  .canvas {
+    padding: 1em;
+
+    & > * {
+      display: inline-block;
+      width: 29px;
+      height: 29px;
+      vertical-align: middle;
+    }
+
+    & :last-child {
+      font-size: 1.7em;
+    }
+
+    .to {
+      text-align: center;
+    }
+  }
 }
