--- a/mnist/src/styles.scss
+++ b/mnist/src/styles.scss
@@ -1,2 +1,5 @@
-/* You can add global styles to this file, and also import other style files */
+body {
+  color: #469ca5;
+}
+
 @import "../node_modules/@angular/material/prebuilt-themes/indigo-pink";
